--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,15 @@ $navbar-default-bg: #ddae36;
 
 }
 
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
+.description {
+    margin-top: 0;
+}
+
 footer {
     margin-top: 55px;
     padding-top: 5px;
