--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,17 @@ $navbar-default-bg: #ddae36;
     margin-top: 0;
 }
 
+.article-title {
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 footer {
     margin-top: 55px;
     padding-top: 5px;
@@ -75,13 +86,4 @@ footer ul li {
     float: left;
     margin-left: 15px;
 }
-
-
-
-
-
-
-
-
-
 
